--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,8 @@ html {
     text-align: center;
     margin-top: 30px;
     font-style: italic;
+    max-width: 100%;
+    height: auto;
 }
 
 /* Biografia */
@@ -69,6 +71,8 @@ html {
 
 /* Imagem Bold */
 .img-bold {
+    max-width: 100%;
+    height: auto;
     text-align: center;
     font-style: italic;
 
@@ -76,4 +80,10 @@ html {
 
 footer {
     text-align: center;
+}
+
+.img-responsive {
+    max-width: 100%;
+    height: auto;
+    display: block;
 }
